# jpl-poc

./: .dockerignore  .gitignore  Dockerfile  Procfile  Procfile.dev  README.md  django.env  docker-compose.yml  heroku.yml  manage.py  package.json  pyproject.toml  tailwind.config.js
gulpfile.js/: copy.js  images.js  index.js  scripts.js  serve.js  styles.js  utils.js  watch.js
jpl/: urls.py  wsgi.py
jpl/icontact/: api.py  models.py  wagtail_hooks.py
jpl/icontact/migrations/: 0001_initial.py  0002_auto_20200417_0830.py  0003_auto_20200417_0835.py  0004_delete_message.py
jpl/images/: models.py
jpl/images/migrations/: 0001_initial.py  0002_auto_20200415_0732.py
jpl/news/: api.py  apps.py  blocks.py  embed.py  models.py  parser.py  wagtail_hooks.py
jpl/news/migrations/: 0004_auto_20200415_0725.py  0005_auto_20200416_0258.py  0006_auto_20200416_0306.py  0007_relatedlink.py  0008_auto_20200416_0658.py  0009_auto_20200416_0703.py  0010_newspage_publish_to_icontact.py  0010_newspage_source.py  0011_auto_20200417_0811.py  0012_merge_20200417_1035.py  0013_remove_newspage_publish_to_icontact.py
jpl/settings/: base.py  dev.py  production.py
jpl/templates/: base.html  sprites.html
jpl/templates/blocks/: embed_block.html  image_block.html
jpl/templates/wagtailadmin/: base.html
news/migrations/: 0001_initial.py  0002_newsindex.py  0003_auto_20200415_0717.py
news/templates/news/: news_page.html
news_import/: README.md  apps.py
news_import/management/commands/: importnews.py
news_import/scrapy_news_import/: scrapy.cfg
static/styles/: main.scss
(+13 files in other folders)
