[tool.poetry]
name = "jpl-poc"
version = "0.1.0"
description = ""
authors = ["Torchbox Ltd"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
wagtail = "^2.8.1"
django-environ = "^0.4.5"
psycopg2 = "^2.8.5"
gunicorn = "^20.0.4"
whitenoise = "^5.0.1"
wagtail_content_import = "^0.4.1"
django-storages = "^1.9.1"
boto3 = "^1.12.39"
django-cors-headers = "^3.2.1"
django-smarty = "^0.1.3"
python-dateutil = "^2.8.1"
scrapy = "^2.0.1"
mammoth = "^1.4.10"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"
honcho = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
